k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: api-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: api

  template:
    metadata:
      labels:
        app: api

    spec:
      containers:
      - name: api-container

        image: IMAGE_PLACEHOLDER

        imagePullPolicy: Never

        ports:
        - containerPort: 7800

        volumeMounts:
        - name: override-volume
          mountPath: /home/aceuser/ace-server/overrides

      volumes:
      - name: override-volume
        configMap:
          name: ace-runtime-config
