k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: backend-deployment

spec:
  replicas: 1

  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      containers:
      - name: backend-container

        image: BACKEND_IMAGE_PLACEHOLDER

        imagePullPolicy: Always

        ports:
        - containerPort: 7800
