k8s/api-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: api-service

spec:
  selector:
    app: api

  ports:
  - protocol: TCP
    port: 7800
    targetPort: 7800

  type: ClusterIP
