k8s/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: backend-service

spec:
  selector:
    app: backend

  ports:
  - protocol: TCP
    port: 7800
    targetPort: 7800

  type: ClusterIP
