k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api-ingress

spec:
  rules:
  - host: api.local

    http:
      paths:
      - path: /

        pathType: Prefix

        backend:
          service:
            name: api-service

            port:
              number: 7800
